--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="header-wrap">
 				<header>
-					<a href="#"><img src="img/2-layers.png" alt="logo"></a>
+					<a href="/site1/index.html"><img src="img/2-layers.png" alt="logo"></a>
 					<div class="contacts-start-p1">
 						<p><span class="text-red">Адрес:</span>  г. Ставрополь, пр. Кулакова, 6</p>
 						<p><span class="text-red">Телефоны:</span> <p>межкомнатные двери <a href="tel:+7852566127">+7 8652 56-61-27</a>, <a href="tel:+78652956868">+7 8652 95-68-68</a></p><p>металлические двери <a href="tel:+78652566049">+7 8652 56-60-49</a></p>
