--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<p><span class="text-red">Телефоны:</span> <p>межкомнатные двери <a href="tel:+7852566127">+7 8652 56-61-27</a>, <a href="tel:+78652956868">+7 8652 95-68-68</a></p><p>металлические двери <a href="tel:+78652566049">+7 8652 56-60-49</a></p>
 					</div>
 					<div class="contacts-start-p2">
-						<p><span class="text-red">E-mail:</span>  <a href="#">stav_slkom@rambler.ru</a></p>
+						<p><span class="text-red">E-mail:</span>  <a href="/site2/index.html">stav_slkom@rambler.ru</a></p>
 						<p><span class="text-red">Сайт:</span>  <a href="#">mir-dverei.ru</a></p>
 						<p><span class="text-red">Открыто: </span>ежедневно, 9:00–18:00</p>
 					</div>
