--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 </head>
 <body>
     <header class="header">
@@ -48,6 +47,7 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/horizontal-scroll.js"></script>
+    <script src="js/TweenMax.min.js"></script>
     <script>
         const blocks = document.getElementsByClassName("container__item")
         const container = document.getElementsByClassName("container")
