--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Unleashedmyself portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 </head>
 <body>
     <header class="header">
@@ -25,19 +26,19 @@
             <a href="https://github.com/UnleashedMySelf" target="_blank"><img src="images/Github.svg" alt="github"></a>
         </div>
         <div class="container__item container__item-1">
-            <a href="/site1/index.html" class="container__item-title">Project 1</a>
+            <a href="/site1/index.html" target="_blank" class="container__item-title">Project 1</a>
         </div>
         <div class="container__item container__item-2">
-            <a href="/site1/index.html" class="container__item-title">Project 1</a>
+            <a href="/site2/index.html" target="_blank" class="container__item-title">Project 2</a>
         </div>
         <div class="container__item container__item-3">
-            <a href="/site1/index.html" class="container__item-title">Project 1</a>
+            <a href="/site3/index.html" target="_blank" class="container__item-title">Project 3</a>
         </div>
         <div class="container__item container__item-4">
-            <a href="/site1/index.html" class="container__item-title">Project 1</a>
+            <a href="/site4/index.html" target="_blank" class="container__item-title">Project 4</a>
         </div>
         <div class="container__item container__item-5">
-            <a href="/site1/index.html" class="container__item-title">Project 1</a>
+            <a href="/site5/index.html" target="_blank" class="container__item-title">Project 5</a>
         </div>
     </div>
     <footer class="footer">
@@ -47,7 +48,6 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/horizontal-scroll.js"></script>
-    <script src="js/TweenMax.min.js"></script>
     <script>
         const blocks = document.getElementsByClassName("container__item")
         const container = document.getElementsByClassName("container")
