--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unleashedmyself portfolio</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 </head>
@@ -15,7 +15,7 @@
                 <a href="index.html">r ;s </a>
             </div>
             <div class="menu__link">
-                <a href="aboutme.html">Curriculum Vitae (CV)</a>
+                <a href="aboutme.html">CV</a>
             </div>
         </nav>
     </header>
@@ -29,7 +29,7 @@
             <a href="/site1/index.html" target="_blank" class="container__item-title">Project 1</a>
         </div>
         <div class="container__item container__item-2">
-            <a href="/site2/index.html" target="_blank" class="container__item-title">Project 2</a>
+            <a href="https://unleashedmyself-music-testsite.000webhostapp.com/" target="_blank" class="container__item-title">Project 2</a>
         </div>
         <div class="container__item container__item-3">
             <a href="/site3/index.html" target="_blank" class="container__item-title">Project 3</a>
