--- a/site4/index.html
+++ b/site4/index.html
@@ -215,11 +215,11 @@
                 </div>
                 <div class="promo-banner-right">
                     <img src="images/Sally-1.svg" alt="sally" class="sally">
-                    <img src="images/saly-10.png" alt="shape" class="shape-1">
-                    <img src="images/saly-3.svg" alt="shape" class="shape-2">
-                    <img src="images/saly-4.svg" alt="shape" class="shape-3">
-                    <img src="images/saly-5.svg" alt="shape" class="shape-4">
-                    <img src="images/saly-6.svg" alt="shape" class="shape-5">                        
+                    <img src="images/Saly-10.png" alt="shape" class="shape-1">
+                    <img src="images/Saly-3.svg" alt="shape" class="shape-2">
+                    <img src="images/Saly-4.svg" alt="shape" class="shape-3">
+                    <img src="images/Saly-5.svg" alt="shape" class="shape-4">
+                    <img src="images/Saly-6.svg" alt="shape" class="shape-5">                        
                 </div>
             </div>
             <article class="interesting__item">
