--- a/index.html
+++ b/index.html
@@ -27,18 +27,49 @@
         </div>
         <div class="container__item container__item-1">
             <a href="/site1/index.html" target="_blank" class="container__item-title">Project 1</a>
+            <ul>
+                <li>SASS</li>
+                <li>CSS-animations</li>
+                <li>JS+JQuery</li>
+                <li>Slick</li>
+                <li>G-Api</li>
+            </ul>
         </div>
         <div class="container__item container__item-2">
             <a href="https://unleashedmyself-music-testsite.000webhostapp.com/" target="_blank" class="container__item-title">Project 2</a>
+            <ul>
+                <li>PHP</li>
+                <li>MySQL</li>
+                <li>Hosting</li>
+                <li>SASS</li>
+                <li>JS+JQuery</li>
+            </ul>
         </div>
         <div class="container__item container__item-3">
             <a href="/site2/index.html" target="_blank" class="container__item-title">Project 3</a>
+            <ul>
+                <li>SASS</li>
+                <li>CSS-animations</li>
+                <li>JS+JQuery</li>
+            </ul>
         </div>
         <div class="container__item container__item-4">
             <a href="/site4/index.html" target="_blank" class="container__item-title">Project 4</a>
+            <ul>
+                <li>BEM</li>
+                <li>SASS</li>
+                <li>CSS-animations</li>
+                <li>JS</li>
+            </ul>
         </div>
         <div class="container__item container__item-5">
             <a href="/site5/index.html" target="_blank" class="container__item-title">Project 5</a>
+            <ul>
+                <li>BEM</li>
+                <li>SASS</li>
+                <li>Logic</li>
+                <li>JS</li>
+            </ul>
         </div>
     </div>
     <footer class="footer">
