--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </div>
     <footer class="footer">
         <p>Copyright <script>document.write(new Date().getFullYear())</script></p>
+        <a href="https://freelancehunt.com/freelancer/StrongPain.html?from=shield&r=A1bX4" target="_blank"><img src="https://freelancehunt.com/shields/display/id/184373/type/rating?style=flat&amp;lang=ru" alt="Freelancehunt — простой и честный фриланс"></a>
     </footer>
 
     <script src="js/jquery-3.6.0.min.js"></script>
