--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
                 <li>G-Api</li>
             </ul>
         </div>
+        <div class="container__item container__item-6">
+            <a href="https://goldensoft.tech/" target="_blank" class="container__item-title">Project golden</a>
+            <ul>
+                <li>WordPress</li>
+                <li>BEM</li>
+                <li>SASS</li>
+                <li>CSS-animations</li>
+                <li>JS+JQuery</li>
+            </ul>
+        </div>
         <div class="container__item container__item-2">
             <a href="https://unleashedmyself-music-testsite.000webhostapp.com/" target="_blank" class="container__item-title">Project 2</a>
             <ul>
