--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
         </div>
         <div class="container__item container__item-6">
-            <a href="https://goldensoft.tech/" target="_blank" class="container__item-title">Project golden</a>
+            <a href="https://goldensoft.tech/" target="_blank" class="container__item-title">Project G</a>
             <ul>
                 <li>WordPress</li>
                 <li>BEM</li>
