--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
                 <li>G-Api</li>
             </ul>
         </div>
+        <div class="container__item container__item-7">
+            <a href="/site-coffee/index.html" target="_blank" class="container__item-title">Project C</a>
+            <ul>
+                <li>SASS</li>
+                <li>JS+JQuery</li>
+                <li>Slick</li>
+                <li>BEM</li>
+            </ul>
+        </div>
         <div class="container__item container__item-6">
             <a href="https://goldensoft.tech/" target="_blank" class="container__item-title">Project G</a>
             <ul>
