--- a/site-coffee/index.html
+++ b/site-coffee/index.html
@@ -185,25 +185,39 @@
             <h3>@coffee_face</h3>
             <div class="main__insta-slider">
                 <div class="insta-slider__item">
-                    <img src="img/insta-pic1.png" class="insta-slider__img" alt="photo">
+                    <a href="#" class="insta__slider__link">
+                        <img src="img/insta-pic1.png" srcset="img/insta-1-retina.png 2x" class="insta-slider__img" alt="photo">
+                    </a>
                 </div>
                 <div class="insta-slider__item">
-                    <img src="img/insta-pic2.png" class="insta-slider__img" alt="photo">
+                    <a href="#" class="insta__slider__link">
+                        <img src="img/insta-pic2.png" srcset="img/insta-2-retina.png 2x" class="insta-slider__img" alt="photo">
+                    </a>
                 </div>
                 <div class="insta-slider__item">
-                    <img src="img/insta-pic3.png" class="insta-slider__img" alt="photo">
+                    <a href="#" class="insta__slider__link">
+                        <img src="img/insta-pic3.png" srcset="img/insta-3-retina.png 2x" class="insta-slider__img" alt="photo">
+                    </a>
                 </div>
                 <div class="insta-slider__item">
-                    <img src="img/insta-pic1.png" class="insta-slider__img" alt="photo">
+                    <a href="#" class="insta__slider__link">
+                        <img src="img/insta-pic1.png" srcset="img/insta-1-retina.png 2x" class="insta-slider__img" alt="photo">
+                    </a>
                 </div>
                 <div class="insta-slider__item">
-                    <img src="img/insta-pic2.png" class="insta-slider__img" alt="photo">
+                    <a href="#" class="insta__slider__link">
+                        <img src="img/insta-pic2.png" srcset="img/insta-2-retina.png 2x" class="insta-slider__img" alt="photo">
+                    </a>
                 </div>
                 <div class="insta-slider__item">
-                    <img src="img/insta-pic3.png" class="insta-slider__img" alt="photo">
+                    <a href="#" class="insta__slider__link">
+                        <img src="img/insta-pic3.png" srcset="img/insta-3-retina.png 2x" class="insta-slider__img" alt="photo">
+                    </a>
                 </div>
                 <div class="insta-slider__item">
-                    <img src="img/insta-pic1.png" class="insta-slider__img" alt="photo">
+                    <a href="#" class="insta__slider__link">
+                        <img src="img/insta-pic1.png" srcset="img/insta-1-retina.png 2x" class="insta-slider__img" alt="photo">
+                    </a>
                 </div>
             </div>
             <div class="main__insta-follow">
@@ -293,15 +307,6 @@
                     slidesToScroll: 1,
                     arrows: false
             }
-            },
-            {
-                breakpoint: 480,
-                settings: {
-                    slidesToShow: 1,
-                    variableWidth: true,
-                    slidesToScroll: 1,
-                    arrows: false
-            }
             }
         ]
             });
@@ -339,12 +344,9 @@
                 arrows: false
             }
             }
-            // You can unslick at a given breakpoint now by adding:
-            // settings: "unslick"
-            // instead of a settings object
         ]
             });
-            $('.main__insta-slider').slick({
+        $('.main__insta-slider').slick({
             slidesToShow: 6,
             variableWidth: true,
             swipeToSlide: true,
@@ -362,15 +364,6 @@
             },
             {
             breakpoint: 600,
-            settings: {
-                slidesToShow: 5,
-                variableWidth: true,
-                swipeToSlide: true,
-                arrows: false
-            }
-            },
-            {
-            breakpoint: 480,
             settings: {
                 slidesToShow: 4,
                 variableWidth: true,
