--- a/site-coffee/index.html
+++ b/site-coffee/index.html
@@ -186,37 +186,37 @@
             <div class="main__insta-slider">
                 <div class="insta-slider__item">
                     <a href="#" class="insta__slider__link">
-                        <img src="img/insta-pic1.png" srcset="img/insta-1-retina.png 2x" class="insta-slider__img" alt="photo">
+                        <img src="img/insta-pic1.png" class="insta-slider__img" alt="photo">
                     </a>
                 </div>
                 <div class="insta-slider__item">
                     <a href="#" class="insta__slider__link">
-                        <img src="img/insta-pic2.png" srcset="img/insta-2-retina.png 2x" class="insta-slider__img" alt="photo">
+                        <img src="img/insta-pic2.png" class="insta-slider__img" alt="photo">
                     </a>
                 </div>
                 <div class="insta-slider__item">
                     <a href="#" class="insta__slider__link">
-                        <img src="img/insta-pic3.png" srcset="img/insta-3-retina.png 2x" class="insta-slider__img" alt="photo">
+                        <img src="img/insta-pic3.png" class="insta-slider__img" alt="photo">
                     </a>
                 </div>
                 <div class="insta-slider__item">
                     <a href="#" class="insta__slider__link">
-                        <img src="img/insta-pic1.png" srcset="img/insta-1-retina.png 2x" class="insta-slider__img" alt="photo">
+                        <img src="img/insta-pic1.png" class="insta-slider__img" alt="photo">
                     </a>
                 </div>
                 <div class="insta-slider__item">
                     <a href="#" class="insta__slider__link">
-                        <img src="img/insta-pic2.png" srcset="img/insta-2-retina.png 2x" class="insta-slider__img" alt="photo">
+                        <img src="img/insta-pic2.png" class="insta-slider__img" alt="photo">
                     </a>
                 </div>
                 <div class="insta-slider__item">
                     <a href="#" class="insta__slider__link">
-                        <img src="img/insta-pic3.png" srcset="img/insta-3-retina.png 2x" class="insta-slider__img" alt="photo">
+                        <img src="img/insta-pic3.png" class="insta-slider__img" alt="photo">
                     </a>
                 </div>
                 <div class="insta-slider__item">
                     <a href="#" class="insta__slider__link">
-                        <img src="img/insta-pic1.png" srcset="img/insta-1-retina.png 2x" class="insta-slider__img" alt="photo">
+                        <img src="img/insta-pic1.png" class="insta-slider__img" alt="photo">
                     </a>
                 </div>
             </div>
