--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
         isAnimated: true,
         springEffect: 0.8
         })
-        
+    </script>
+    <script>
         $(function() {
-        $('.lazy').lazy();
-    });
+            $('.lazy').lazy();
+        });
     </script>
 </body>
 </html>
