--- a/cv.html
+++ b/cv.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="bundle.css" />
     <title>Shyrokov Roman portfolio</title>
 
-    <!-- ios 12 AlpineJS polyfills -->
+    <style>
+      /* FONT "AEONIK" START */
+      @font-face {
+        font-family: "Aeonik";
+        font-style: normal;
+        font-weight: 400;
+        font-display: fallback;
+        src: url("fonts/AeonikTRIAL-Regular.otf") format("opentype");
+      }
+      @font-face {
+        font-family: "Aeonik";
+        font-style: normal;
+        font-weight: 700;
+        font-display: fallback;
+        src: url("fonts/AeonikTRIAL-Bold.otf") format("opentype");
+      }
+    </style>
 
+    <!-- ios 12 AlpineJS polyfills -->
     <script>
       if (typeof window.queueMicrotask !== "function") {
         window.queueMicrotask = function (callback) {
@@ -68,27 +85,27 @@
       </ul>
     </header>
 
-    <div class="" data-marquee-inner>
-      <div
-        class="marquee fixed top-1/3 inline-flex w-max items-center"
-        x-data="marquee"
-        @resize.window="marqueeLogic()"
-      >
-        <span
-          class="flex w-full shrink-0 whitespace-nowrap px-3 text-gray-700"
-          data-marquee-el
+    <main role="main" class="relative flex flex-1 flex-col overflow-hidden">
+      <div data-marquee-inner>
+        <div
+          class="marquee fixed top-1/3 inline-flex w-max items-center"
+          x-data="marquee"
+          @resize.window="marqueeLogic()"
         >
-          talk less do more
-        </span>
+          <span
+            class="flex w-full shrink-0 whitespace-nowrap px-3 text-gray-700"
+            data-marquee-el
+          >
+            talk less do more
+          </span>
+        </div>
       </div>
-    </div>
 
-    <main role="main" class="container relative flex flex-1 flex-col">
       <h1 class="mb-5 text-center text-3xl">CV</h1>
       <object
         data="Shyrokov_CV.pdf"
         type="application/pdf"
-        class="h-full w-full flex-1"
+        class="container relative h-full w-full flex-1"
       >
         <p class="mx-auto mt-10 text-center">
           Unable to display PDF file.
