--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="bundle.css" />
     <title>Shyrokov Roman portfolio</title>
 
-    <!-- ios 12 AlpineJS polyfills -->
+    <style>
+      /* FONT "AEONIK" START */
+      @font-face {
+        font-family: "Aeonik";
+        font-style: normal;
+        font-weight: 400;
+        font-display: fallback;
+        src: url("fonts/AeonikTRIAL-Regular.otf") format("opentype");
+      }
+      @font-face {
+        font-family: "Aeonik";
+        font-style: normal;
+        font-weight: 700;
+        font-display: fallback;
+        src: url("fonts/AeonikTRIAL-Bold.otf") format("opentype");
+      }
+    </style>
 
+    <!-- ios 12 AlpineJS polyfills -->
     <script>
       if (typeof window.queueMicrotask !== "function") {
         window.queueMicrotask = function (callback) {
@@ -71,26 +88,26 @@
       </ul>
     </header>
 
-    <div class="" data-marquee-inner>
-      <div
-        class="marquee fixed top-1/3 inline-flex w-max items-center"
-        x-data="marquee"
-        @resize.window="marqueeLogic()"
-      >
-        <span
-          class="flex w-full shrink-0 whitespace-nowrap px-3 text-gray-700"
-          data-marquee-el
-        >
-          talk less do more
-        </span>
-      </div>
-    </div>
-
     <main
       role="main"
-      class="relative flex flex-1 flex-col"
+      class="relative flex flex-1 flex-col overflow-hidden"
       @click.self="close()"
     >
+      <div data-marquee-inner>
+        <div
+          class="marquee fixed top-1/3 inline-flex w-max items-center"
+          x-data="marquee"
+          @resize.window="marqueeLogic()"
+        >
+          <span
+            class="flex w-full shrink-0 whitespace-nowrap px-3 text-gray-700"
+            data-marquee-el
+          >
+            talk less do more
+          </span>
+        </div>
+      </div>
+
       <div class="container mt-auto">
         <h2 class="mb-5 text-xl md:text-3xl">Some Shopify Stores:</h2>
         <ul>
