--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="relative mx-auto mb-10 max-w-sm">
             <img
               class="relative z-[1] h-full w-full object-center"
-              src="https://i.imgur.com/FhH9oYo.jpg"
+              src="https://i.imgur.com/LcvJwSM.png"
               alt="it's me"
             />
             <span
